2006-04-16	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.5.1beta1 ===
	* NEWS, configure.in.in: Bump version.
	* Terminal.spec.in: Update RPM spec file.
	* configure.in.in: Depend on libexo 0.3.16beta1.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* po/Terminal.pot, po/*.po: Updated.
	* po/de.po: Update german translations.
	* po-doc/ja.po, doc/ja/Terminal.xml.in: Updated.
	* THANKS: Add translator credits for Andrey
	  Fedoseev <andrey.fedoseev@gmail.com>.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* NEWS: Update NEWS.
	* doc/C/Terminal.xml.in: Update documentation date.

2006-04-15	Benedikt Meurer <benny@xfce.org>

	* icons/: stock/generic is no longer present in the hicolor icon theme.
	  Use stock/navigation instead.
	* terminal/terminal-preferences-dialog.c
	  (terminal_preferences_dialog_init): Allow to close the preferences
	  dialog using Escape.

2006-04-09	Benedikt Meurer <benny@xfce.org>

	* icons/Makefile.am: Be sure to run gtk-update-icon-cache after
	  installing new icons into the hicolor icon theme (skipped if $DESTDIR
	  is set).

2006-03-12	Benedikt Meurer <benny@xfce.org>

	* po-doc/, Makefile.am, configure.in.in: Apply Daichi's patch to enable
	  translation of the user manual through .po files, using xml2po.

2006-03-11	Benedikt Meurer <benny@xfce.org>

	* helpers/sylpheed-claws.desktop.in: Fix typo.

2006-03-11	Benedikt Meurer <benny@xfce.org>

	* helpers/sylpheed-claws.desktop.in, helpers/Makefile.am: Add Sylpheed
	  Claws as MailReader to the helper list. Thanks to Bernhard Walle
	  <bernhard.walle@gmx.de>.

2006-03-06	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Fix PACKAGE_BUGREPORT.

2006-03-06	Benedikt Meurer <benny@xfce.org>

	* autogen.sh, configure.in.in, po/LINGUAS: Read the set of available
	  languages from po/LINGUAS and substitute them when autogen.sh is
	  run. This way we can continue to use glib-gettext.
