@@ -1,3 +1,8 @@
+2006-04-18	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-window.c(terminal_window_action_about): Use
+	  GPL license text provided by libxfce4util.
+
 2006-04-16	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Post-release version bump.
